# smart-categorizer

./: .gitignore  README.md  main.py  pyproject.toml
